# ViPSA

./: .gitignore  CHANGELOG.md  Datahandling.py  LICENSE  Listmaker2.py  Main4.py  README.md  System overview.pptx  Viewfinder3.py  bench_validate.py  notes.txt  pyproject.toml  run_crossbar_tk.sh  run_standalone_smu_tk.sh  run_testmaker.sh  run_viewfinder.sh
Compoents/: GUI.py  Openflexture.py  Source_Measure_Unit.py  Vision.py
archive/docs_audit/: AUDIT_ISSUES.md  DELIVERABLES.md  PROTOCOL_EDITOR_FIXES.md  SUMMARY.md
archive/examples/: datahandling_scratch.py  rag_pdf_experiment.py  smu_data_trial.py
archive/gui_psg/: GUI_crossbar.py  GUI_standalone_SMU.py  GUI_standalone_SMU_2.py  Viewfinder3.py  Viewfinder4.py
archive/legacy_workflows/: Main4-Shreyas-PC.py
archive/root_legacy/: DELIVERABLES.md  Datahandling.py  FIXES_AND_RECOMMENDATIONS.md  GUI_crossbar.py  GUI_standalone_SMU.py  Grid_meas.py  (+27 more)
docs/: EQUIPMENT_MANUAL.txt  MIGRATION_MAP.md  PROTOCOL_FLOW.md  testmaker_composition_scheme.md  viewfinder4_dependencies.mmd  viewfinder4_internal_map.html  viewfinder4_internal_members.mmd  vipsa_code_map.mmd
examples/: datahandling_scratch.py
scripts/: __init__.py  emulated_viewfinder_e2e.py  grid_meas.py  instrument_usb_scan.py  keysight_explicit_measure_test.py  keysight_force_front_test.py  manual_sweep.py  negative_sweeping.py  plot_sigmoid_from_csv.py  resistance_plotting.py  trial.py  trial_stage.py
tests/: fake_visa.py  test_command_sequences.py  test_scpi_driver_commands.py  test_smu_backcompat_smoke.py  test_sweep_generation.py
vipsa/: __init__.py
(+93 files in other folders)
