[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vipsa-clean"
version = "0.1.0"
description = "Structured migration of the ViPSA measurement repository"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["vipsa*"]
